--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "express": "^4.13.4",
     "express-mysql": "0.0.1",
     "express-session": "^1.13.0",
     "mysql": "^2.10.2",
-    "session": "^0.1.0"
+    "path": "^0.12.7",
+    "sendgrid": "^1.9.2",
+    "sequelize": "^3.21.0",
+    "session": "^0.1.0",
+    "sqlite3": "^3.1.3",
+    "underscore": "^1.8.3"
   }
 }
