--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-mysql": "0.0.1",
     "express-session": "^1.13.0",
+    "lodash": "^4.11.1",
     "mysql": "^2.10.2",
     "path": "^0.12.7",
     "sendgrid": "^1.9.2",
     "sequelize": "^3.21.0",
     "session": "^0.1.0",
     "sqlite3": "^3.1.3",
-    "underscore": "^1.8.3"
+    "terraformer": "^1.0.5",
+    "underscore": "^1.8.3",
+    "wkx": "^0.2.0"
   }
 }
