--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.11.1",
     "mysql": "^2.10.2",
     "path": "^0.12.7",
+    "pg": "^4.5.3",
+    "pg-hstore": "^2.3.2",
     "sendgrid": "^1.9.2",
     "sequelize": "^3.21.0",
     "session": "^0.1.0",
