--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "sqlite3": "^3.1.3",
     "terraformer": "^1.0.5",
     "underscore": "^1.8.3",
-    "wkx": "^0.2.0"
+    "wkx": "^0.2.0",
+    "express-react-views": "^0.10.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
