--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-  "version": "1.0.0",
+
+  {"version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,5 +27,4 @@
     "express-react-views": "^0.10.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
-  }
-
+  }}
