--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-
-  {"version": "1.0.0",
+{
+  "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,22 +9,24 @@
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "debug": "^2.2.0",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-mysql": "0.0.1",
+    "express-react-views": "^0.10.1",
     "express-session": "^1.13.0",
     "lodash": "^4.11.1",
     "mysql": "^2.10.2",
     "path": "^0.12.7",
     "pg": "^4.5.3",
     "pg-hstore": "^2.3.2",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "sendgrid": "^1.9.2",
     "sequelize": "^3.21.0",
     "session": "^0.1.0",
     "sqlite3": "^3.1.3",
     "terraformer": "^1.0.5",
     "underscore": "^1.8.3",
-    "wkx": "^0.2.0",
-    "express-react-views": "^0.10.1",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
-  }}
+    "wkx": "^0.2.0"
+  }
+}
